--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "devDependencies": {
         "@babel/preset-env": "^7.10.4",
         "cross-env": "^7.0",
-        "laravel-mix": "^5.0.1",
-        "lodash": "^4.17.13",
+        "laravel-mix": "^5.0.5",
+        "lodash": "^4.17.20",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
@@ -26,9 +26,11 @@
         "@inertiajs/inertia-vue": "^0.1.4",
         "@mdi/font": "^5.3.45",
         "@tinymce/tinymce-vue": "^3.2.2",
+        "apexcharts": "^3.20.0",
         "axios": "^0.19.2",
         "babel-polyfill": "^6.26.0",
         "nprogress": "^0.2.0",
+        "vue-apexcharts": "^1.6.0",
         "vue-my-photos": "^1.0.4",
         "vue-owl-carousel": "^2.0.3",
         "vuelidate": "^0.7.5",
